--- a/Dog.html
+++ b/Dog.html
@@ -6,10 +6,9 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-<nav>
-	<a href="Assignment.html">Home</a>
-	<a href="Dog.html">Dog Picture</a>
-	<a href="Dog_video.html">Dog Video</a>
-</nav>
+		<img src="C:\Users\jorda\OneDrive\Documents\GitHub\HTML-CSS\Dog.jpg">
+		<main>
+<a href="Assignment.html">Home</a>
+		</main>
 	</body>
 </html>
