added Basic HTML file
Basic HTML template

--- a/Dog1.html
+++ b/Dog1.html
@@ -5,13 +5,14 @@
 		<title>Write title here.</title>
 		<meta charset="utf-8">
 	</head>
-	<nav>
+
+	<body>
+<nav>
 	<a href="Dog Video1.html">Home</a>
 	<a href="Dog1.html">Dog Picture</a>	
 </nav>
-	<body>
 		<main>
-			<img src="C:\Users\jorda\OneDrive\Documents\GitHub\HTML-CSS\Dog.jpg">		
+			<img src="Dog1.jpg">		
 		</main>
 	</body>
 </html>
