--- a/Challenges/Eighth Challenge.html
+++ b/Challenges/Eighth Challenge.html
@@ -38,8 +38,8 @@
 			}
 			
 			.text {
-			  background-color: #04AA6D;
-			  color: white;
+			  background-color: aqua;
+			  color: green;
 			  font-size: 16px;
 			  padding: 16px 32px;
 			}
@@ -47,7 +47,15 @@
 	</head>
 	<body>
 		
-
+        <h2>Hover Overlay of a picture</h2>
+        <p>Hover over the image to see where this place is.</p>
+        
+        <div class="container">
+          <img src="../Icons/Little_Crater_Lake.jpg" alt="lake" class="image" style="width:100%">
+          <div class="middle">
+            <div class="text">Little Crater Lake on Mount Hood, Oregon</div>
+          </div>
+        </div>
 
         
 	</body>
