--- a/Basic_HTML_Template2.html
+++ b/Basic_HTML_Template2.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Basic HTML</title>
+		<title>Auto-play looped muted video</title>
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		
+	<div>
+
+		<video autoplay muted loop> <source src="./Challenges/Video/pexels (1080p).mp4" type="video/mp4"> </video>
+
+
+	</div>	
 
 
         
