--- a/BasicHTML.html
+++ b/BasicHTML.html
@@ -5,6 +5,15 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		
+	<br>
+	<br>
+	<p id="demo" ondblclick="myFunction()">changing the font color with ondblclick </p>	
+	<br>
+	<br>
+	<script>
+		function myFunction() {
+			document.getElementById("demo").style.color= "green";
+		}
+	</script>
 	</body>
 </html>
